Fix right click to remove & spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,7 +38,7 @@ body {
 }
 
 #importContainer {
-    height: 40%;
+    height: 50%;
     width: 100%;
     padding: 8px;
     display: flex;
